<resources>
    <string name="app_name">Chronos</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="am12">12 am</string>
    <string name="am1">1 am</string>
    <string name="am2">2 am</string>
    <string name="am3">3 am</string>
    <string name="am4">4 am</string>
    <string name="am5">5 am</string>
    <string name="am6">6 am</string>
    <string name="am7">7 am</string>
    <string name="am8">8 am</string>
    <string name="am9">9 am</string>
    <string name="am10">10 am</string>
    <string name="am11">11 am</string>
    <string name="pm12">12 pm</string>
    <string name="pm1">1 pm</string>
    <string name="pm2">2 pm</string>
    <string name="pm3">3 pm</string>
    <string name="pm4">4 pm</string>
    <string name="pm5">5 pm</string>
    <string name="pm6">6 pm</string>
    <string name="pm7">7 pm</string>
    <string name="pm8">8 pm</string>
    <string name="pm9">9 pm</string>
    <string name="pm10">10 pm</string>
    <string name="pm11">11 pm</string>


    <!-- Strings related to login -->
    <string name="scrape">Scrape (only on correct page)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name = "import_progress">Please Wait\nImporting Schedule from LeopardWeb\n%.0f%% Complete</string>

    <string name="getSchedButton"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="course_name_fragment">This is the Course Name</string>
    <string name="course_number_fragment">This is the Course Number</string>
    <string name="professor_fragment">This is the Professor</string>
    <string name="location_fragment">This is the Location</string>
    <string name="close_fragment">X</string>
    <string name="custom_name_fragment">Custom Name: </string>
    <string name="custom_save_fragment">Save</string>
    <string name="course_times_fragment">These are the course times</string>
</resources>
