<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/SingleDayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/TextViewForDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/mon"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/dividerView"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/SingleDayLayout"
        android:background="@color/gray2" />

    <ScrollView
        android:id="@+id/calendarScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/dividerView"
        android:layout_alignParentBottom="true"
        android:overScrollMode="never"
        android:padding="0dp"
        android:scrollbars="none"
        android:fadingEdge="none" >

        <RelativeLayout
            android:id="@+id/calendarRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp" >

            <LinearLayout
                android:id="@+id/calendarSplitterRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:padding="0dp" >

            <RelativeLayout
                android:id="@+id/hoursRelativeLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="0dp" >

                <include
                    layout="@layout/calendar_cells"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:id="@+id/time7amTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/am7"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time8amTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:text="@string/am8"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time9amTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="120dp"
                    android:gravity="center"
                    android:text="@string/am9"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time10amTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="180dp"
                    android:gravity="center"
                    android:text="@string/am10"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time11amTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="240dp"
                    android:gravity="center"
                    android:text="@string/am11"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time12pmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="300dp"
                    android:gravity="center"
                    android:text="@string/pm12"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time1pmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="360dp"
                    android:gravity="center"
                    android:text="@string/pm1"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time2pmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="420dp"
                    android:gravity="center"
                    android:text="@string/pm2"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time3pmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="480dp"
                    android:gravity="center"
                    android:text="@string/pm3"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time4pmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="540dp"
                    android:gravity="center"
                    android:text="@string/pm4"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time5pmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="600dp"
                    android:gravity="center"
                    android:text="@string/pm5"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time6pmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="660dp"
                    android:gravity="center"
                    android:text="@string/pm6"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time7pmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="720dp"
                    android:gravity="center"
                    android:text="@string/pm7"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time8pmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="780dp"
                    android:gravity="center"
                    android:text="@string/pm8"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/time9pmTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="840dp"
                    android:gravity="center"
                    android:text="@string/pm9"
                    android:textSize="15sp" />

             </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mondayRelativeLayout"
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <include layout="@layout/calendar_cells" />

                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>